--- a/src/Containers/Home/UserPage/Components/inforAccount/components/component.scss
+++ b/src/Containers/Home/UserPage/Components/inforAccount/components/component.scss
@@ -2,7 +2,7 @@
   .form__row {
     height: 50px;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
   }
   .btn__content {
     display: flex;
