--- a/src/Containers/Admin/login/index.scss
+++ b/src/Containers/Admin/login/index.scss
@@ -1,6 +1,6 @@
 .background__Login {
   position: fixed;
-  background-image: url("./../../../assets/img/bg7.jpg");
+  // background-image: url("./../../../assets/img/bg7.jpg");
   width: 100%;
   height: 100%;
   .login__container {
