--- a/src/Containers/Home/HomePage/checkout/index.scss
+++ b/src/Containers/Home/HomePage/checkout/index.scss
@@ -76,7 +76,7 @@
   .checkout__fixed {
     .note {
       // margin: 0;
-      color: chocolate;
+      color: #f79400;
       text-align: center;
       border-top: 1px solid;
       margin: 0.75px 15px;
