--- a/src/Containers/Home/HomePage/checkout/index.scss
+++ b/src/Containers/Home/HomePage/checkout/index.scss
@@ -47,7 +47,7 @@
     padding-top: 25px;
     grid-area: 1/1/12/1;
     display: grid;
-    gap: 0;
+    gap: 8px;
     .column__item {
       cursor: default;
       pointer-events: none;
